  * examples/dirmon.rb: added this examples
  * README: created README
  * examples/dirmon.rb: full comments
  * fam.c: removed reference to Fam::Connection#close (rdoc was finding it
    even though it was commented out).
  * doc/: regenerated documentation
  * released version 0.1.0

* Monday, May 27 21:35:05 2002 EST, <pabs@pablotron.org>
  * minor updates to README

* Tuesday, May 28 10:19:10 2002 EST, <pabs@pablotron.org>
  * README: added reference to rdoc-generated documentation in intro.
  * doc/event_codes.txt: added note about EXEC and ENDEXEC events not
    working on non-imon Linux systems.

* Wed Jun 25 16:08:10 2003, pabs <pabs@pablotron.org>
  * fam.c: return request numbers with INT2NUM() instead of INT2FIX()
    (slightly safer)
  * fam.c: switched from FAMMonitorFile2() to FAMMonitorFile() in 
    Fam::Connection#monitor_file to avoid an apparent FAM bug reported
    by Thomas Maier (Thomas.Maier@uni-kassel.de).
  * released version 0.1.1.

* Fri Sep 26 14:18:26 2003, pabs <pabs@pablotron.org>
  * initial improt to cvs
  * remove doc/

* Fri Sep 26 14:20:02 2003, pabs <pabs@pablotron.org>
  * fam.c: patch from Jon Bernard <jbernard@roanoke.edu> to correct
    warning

* Fri Sep 26 16:02:39 2003, pabs <pabs@pablotron.org>
  * releasing version 0.1.2.

* Thu Jan 22 15:30:43 2004, pabs <pabs@pablotron.org>
  * applied unique reqnum patch from MORI Daijiro <mori@epepe.com>

* Thu Jan 22 15:32:36 2004, pabs <pabs@pablotron.org>
  * COPYING: updated copyright year
  * README: updated version
  * releasing version 0.1.3

* Thu Jan 22 15:39:11 2004, pabs <pabs@pablotron.org>
  * added AUTHORS
  * _really_ releasing version 0.1.3 :)

* Sat Jul 10 18:20:04 2004, pabs <pabs@pablotron.org>
  * fam.c: incremented version to 0.1.4
  * README: updated copyright year
  * COPYING: updated copyright year

* Sat Jul 10 18:35:58 2004, pabs <pabs@pablotron.org>
  * AUTHORS: added entry for Nobuyoshi Nakada <nobu@ruby-lang.org>